# sc17-born

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  env.sh  main.cc  model.cc  rtm.cc  test.cu
base/: CMakeLists.txt  base_prop.h  cgstep.cc  cgstep.h  combo_oper.cc  combo_oper.h  cpu_prop.cc  cpu_prop.h  data_rtm_3d.cc  data_rtm_3d.h  deriv_3d.cc  deriv_3d.h  fd_prop_3d.cc  fd_prop_3d.h  float_1d.cc  float_1d.h  float_3d.cc  float_3d.h  gpu_prop.cc  gpu_prop.h  hypercube_float.cc  hypercube_float.h  i_op.cc  i_op.h  image_rtm_3d.cc  image_rtm_3d.h  laplac_3d.cc  laplac_3d.h  lin_solver.cc  lin_solver.h  map_data_3d.cc  map_data_3d.h  my_operator.cc  my_operator.h  my_vector.h  oc_float.cc  oc_float.h  rtm_zero_op_3d.cc  rtm_zero_op_3d.h  sinc_bob.cc  (+12 more)
base/gpu/: cudaErrors.cu  extra.cc  extra.h  gpu_finite_3d.cu  gpu_finite_3d.h  gpu_funcs_3d.cu  gpu_funcs_3d.h  save.cu  wave_fkernel.3d8o.cu
dockers/: Dockerfile.centos  Dockerfile.debian
examp/: Makefile  data.P  data.json  data.small.P  env.sh  image.P  image.json  image.small.P  mig.P  model.P  model.py  model.small.P  vel.P  vel.json  wavelet.P  wavelet.json
gpu/: cudaErrors.cu  gpu_finite_3d.cu  gpu_funcs_3d.cu  gpu_funcs_3d.h  save.cu  wave_fkernel.3d8o.cu
module/: born.in
scripts/: .gitignore  README.md  requirements.txt  run.py  split.py  verify.py
util/: Add.cc  CMakeLists.txt  Data.cc  Vel.cc  Wavelet.cc
